# interactive_mapping

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
data/hri17/knowledge/: bowls_knowledge.txt  cups_knowledge.txt  lunch_knowledge.txt
data/hri17/results/: u10_t0.txt  u10_t1.txt  u10_t2.txt  u11_t0.txt  u11_t1.txt  u11_t2.txt  u12_t0.txt  u12_t1.txt  u12_t2.txt  u2_t0.txt  u2_t1.txt  u2_t2.txt  u4_t0.txt  u4_t1.txt  u4_t2.txt  u5_t0.txt  u5_t1.txt  u5_t2.txt  u6_t0.txt  u6_t1.txt  u6_t2.txt  u7_t0.txt  u7_t1.txt  u7_t2.txt  u8_t0.txt  u8_t1.txt  u8_t2.txt  u9_t0.txt  u9_t1.txt  u9_t2.txt
data/hri17/solutions/: t0.txt  t1.txt  t2.txt
data/hri17/u10_t0/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u10_t1/: hints.txt  source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u10_t2/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u11_t0/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u11_t1/: hints.txt  source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u11_t2/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u12_t0/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u12_t1/: hints.txt  source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u12_t2/: source_objects.txt  target_objects.txt  targeters.txt
data/hri17/u2_t0/: hints.txt  source_objects.txt  target_objects.txt  targeters.txt
src/mapping/: entity.py  file_io.py  mapper.py  metrics.py  object_defs.py  utils.py
test/: hri17.py  test.py
(+70 files in other folders)
