<?xml version="1.0"?>
<package>
  <name>mapping</name>
  <version>0.0.0</version>
  <description>Package for inferring object mappings from interaction</description>

  <maintainer email="tesca.fitzgerald@gmail.com">Tesca Fitzgerald</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
